tests/example_policies/demo/regression/regression-withIpBlock-old.yaml
# The "old" policy

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: enable-from-kube-system-tier-frontend-to-ipBlocs-old
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      tier: frontend
  policyTypes:
    - Egress
  egress: 
    - to:
      - ipBlock:
          cidr: 128.0.0.0/2     # first half 
          except:
            - 172.21.0.0/16     # Kube Service CIDR Range
            - 172.30.0.0/16     # Kube Cluster CIDR Range
      ports:
        - port: 53
        - port: 54
